fix "back to organization" alignment + fontsize

--- a/src/sentry/static/sentry/less/layout.less
+++ b/src/sentry/static/sentry/less/layout.less
@@ -57,6 +57,11 @@ body.narrow {
     .box-header {
       padding: 15px 30px 10px;
 
+      .logo-with-action {
+        display: flex;
+        align-items: center;
+      }
+
       a {
         font-size: 20px;
 
